<resources>
    <string name="app_name">Ziffer</string>
    <string name="search_hint">Search Events</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search Events</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_filter">Filter Events</string>
    <string name="title_activity_my_created_events">My Created Events</string>
    <string name="title_activity_create_event">New event</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register new account</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_unmatching_passwords">The passwords do not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="link_registration">New to Ziffer? Register here</string>
    <string name="link_sign_in">Already have an account? Sign in here</string>
    <string name="error_taken_username">This username is already taken</string>

    <string name="nearby_events">Nearby Events</string>
    <string name="joined_events">Joined Events</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="german_level">German Level</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="select_location">Select Location</string>
    <string name="date">Date</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="duration">Duration</string>
    <string name="duration_1hr">1 hour</string>
    <string name="duration_hours">%d hours</string>
    <string name="duration_1min">1 minute</string>
    <string name="duration_minutes">%d minutes</string>
    <string name="min_attendees">Min Attendees</string>
    <string name="max_attendees">Max Attendees</string>
    <string name="description">Description</string>
    <string name="a1_beginner">A1 - Beginner</string>
    <string name="a2_elementary">A2 - Elementary</string>
    <string name="b1_intermediate">B1 - Intermediate</string>
    <string name="b2_upper_intermediate">B2 - Upper Intermediate</string>
    <string name="c1_advanced">C1 - Advanced</string>
    <string name="date_from_to" formatted="false">%s at %s - %s</string>
    <string name="hosted_by" formatted="false">Hosted by %s %s</string>
    <string name="guest_list">Guest List</string>
    <string name="details">Event Details</string>
    <string name="attendance_of" formatted="false">%d of</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="description_optional">Description (optional)</string>
    <string name="error_invalid_date_of_birth">Date of birth is invalid</string>
    <string name="error_unselected_german_level">Select your current German level</string>
    <string name="select_photo">Select photo</string>
	<string name="moments_ago">Moments ago</string>

    <string name="join_event">Join Event</string>
    <string name="inform_status_joined">You have joined this event</string>
    <string name="cancel_attendance">Cancel Attendance</string>
    <string name="delete_event">Delete Event</string>
    <string name="view_guest_list">View Guest List</string>
    <string name="notify_join_success">You\'ve been added to the guest list!</string>
    <string name="notify_remove_guest_success">You\'ve been removed from the guest list</string>
    <string name="notify_delete_success">Event was successfully deleted</string>
    <string name="notify_create_success">New event saved!</string>

    <string-array name="notifications_array" formatted="false">
        <item>%s has joined your event \"%s.\"</item>
        <item>%s is no longer attending your event \"%s.\"</item>
        <item>%s has made changes to the the event \"%s.\"</item>
        <item>%s has deleted the event \"%s.\"</item>
        <item>\"%s\" starts in 1 hour.</item>
    </string-array>

    <plurals name="new_notifications">
        <item quantity="one">You have %d new notification</item>
        <item quantity="other">You have %d new notifications</item>
    </plurals>

    <plurals name="minutes_ago">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
	
    <plurals name="hours_ago">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
	
    <plurals name="days_ago">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>

    <plurals name="joined_guests">
        <item quantity="one">%d guest has joined</item>
        <item quantity="other">%d guests have joined</item>
    </plurals>
</resources>
